arreglar warnings